# minimal-cpp-template-project

./: .gitignore  CMakeLists.txt  LICENSE  README.md  all.sh  build.sh  conanfile.py  conanprofile.linux.txt  conanprofile.windows.txt  configure.sh  install_packages.sh
.github/actions/cmake_config/: action.yml
.github/actions/install_conan_packages/: action.yml
.github/workflows/: ci.yml
src/: CMakeLists.txt  main.cpp
